deployment/: clean up directory (preparation for next step)

--- a/deployment/deprecated/README
+++ b/deployment/deprecated/README
@@ -1,3 +1,6 @@
+The information below is from 2013 and seems not to be relevant anymore
+
+
 This folder is used to store configuration files.
 
 These files are used while developing or deploying your Django project,
